After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706964 - applet commit 0d8fb4dea08198663c454143779ef082dccdff4e breaks gnome-control-center
applet commit 0d8fb4dea08198663c454143779ef082dccdff4e breaks gnome-control-c...
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
0.9.x
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-08-28 09:49 UTC by Colin Walters
Modified: 2013-08-29 18:52 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Colin Walters 2013-08-28 09:49:46 UTC
https://git.gnome.org/browse/network-manager-applet/commit/?id=0d8fb4dea08198663c454143779ef082dccdff4e breaks gnome-control-center which is using those symbols.

At this point in the release cycle, we should probably revert this commit.  Then fix gnome-cc at the start of the next cycle.
Comment 1 Colin Walters 2013-08-28 09:50:02 UTC
../panels/network/.libs/libnetwork.a(network-dialogs.o): In function `wireless_dialog_response_cb':
/ostbuild/source/gnome-control-center/_build/panels/network/../../../panels/network/network-dialogs.c:133: undefined reference to `nma_wifi_dialog_get_nag_ignored'
/ostbuild/source/gnome-control-center/_build/panels/network/../../../panels/network/network-dialogs.c:139: undefined reference to `nma_wifi_dialog_nag_user'
../panels/network/.libs/libnetwork.a(network-dialogs.o): In function `nag_dialog_response_cb':
/ostbuild/source/gnome-control-center/_build/panels/network/../../../panels/network/network-dialogs.c:113: undefined reference to `nma_wifi_dialog_set_nag_ignored'
Comment 2 Thomas Haller 2013-08-28 11:05:47 UTC
Oh, that's bad.

We could also restore just these functions and letting them return dummy values.
How about https://git.gnome.org/browse/network-manager-applet/log/?h=thaller/bgo706964-link_error_nag_dialog ?
Comment 3 Thomas Haller 2013-08-28 11:16:00 UTC
I should add, that also before, the function nma_wifi_dialog_nag_user returned NULL for most of the configurations. Only for PEAP, TLS and TTLS there was actually a nag dialog returned.

These dummy functions with returning always NULL *should* not break anything.



Another thing is, you are getting linker errors (right?) for missing symbols. But I removed the symbols also removed from the include files. I guess, you did recompile everything against the newest nm-applet version?
Comment 4 Dan Winship 2013-08-28 12:31:30 UTC
NM 0.9.10 won't be shipping with GNOME 3.10. The jhbuild moduleset should be building against nm-0-9-8 and nma-0-9-8
Comment 5 Colin Walters 2013-08-28 17:48:50 UTC
(In reply to comment #4)
> NM 0.9.10 won't be shipping with GNOME 3.10. The jhbuild moduleset should be
> building against nm-0-9-8 and nma-0-9-8

Why are these modules not synchronized to the GNOME schedule?
Comment 6 Seán de Búrca 2013-08-28 18:28:20 UTC
A bug has been filed against jhbuild for using the -0-9-8 branches: https://bugzilla.gnome.org/show_bug.cgi?id=707009.
Comment 7 Dan Winship 2013-08-28 18:53:26 UTC
It's loosely synchronized. There will be an NM 0.9.8.4 release for GNOME 3.10. 

But the general answer is, because NetworkManager isn't really part of GNOME any more, and the vast majority of the NetworkManager hacking going on these days is non-GNOME-related.
Comment 8 Seán de Búrca 2013-08-28 18:59:49 UTC
Does ModemManager need to be built from a branch as well? nm-0-9-8 fails to build with NM_TYPE_CDMA_ERROR undeclared at src/modem-manager/nm-modem-cdma:357.
Comment 9 Seán de Búrca 2013-08-28 19:26:51 UTC
Nevermind. This appears to have been a problem with my tree. It compiles correctly with a clean tree and the nm-0-9-8 branch.
Comment 10 Dan Williams 2013-08-29 18:18:47 UTC
(In reply to comment #2)
> Oh, that's bad.
> 
> We could also restore just these functions and letting them return dummy
> values.
> How about
> https://git.gnome.org/browse/network-manager-applet/log/?h=thaller/bgo706964-link_error_nag_dialog
> ?

This is the right approach, please merge, thanks!  While reviewing the patches I did check GNOME Shell for nag stuff, but I neglected to check the control center :(
Comment 11 Thomas Haller 2013-08-29 18:31:20 UTC
(In reply to comment #2)
> Oh, that's bad.
> 
> We could also restore just these functions and letting them return dummy
> values.
> How about
> https://git.gnome.org/browse/network-manager-applet/log/?h=thaller/bgo706964-link_error_nag_dialog
> ?

This commit is now pushed to master.

https://git.gnome.org/browse/network-manager-applet/commit/?id=e21d598896ccd2c52850f52d21fe1d5aaa4e5410
Comment 12 Colin Walters 2013-08-29 18:52:56 UTC
Thanks!