applet: restore deprecated functions for nag dialog

These functions were removed, which breakes gnome-control-center.
Restore the function definitions to fix it but let them return
dummy values.

As nma_wifi_dialog_nag_user most of the time returned NULL anyway
(to indicate "no nagging"), this dummy behaviour should not cause
any issues.

https://bugzilla.gnome.org/show_bug.cgi?id=706964