src/libnm-gtk/nm-wifi-dialog.h
@@ -71,5 +71,14 @@ NMConnection * nma_wifi_dialog_get_connection (NMAWifiDialog *self,
                                                NMDevice **device,
                                                NMAccessPoint **ap);
 
+GLIB_DEPRECATED
+GtkWidget * nma_wifi_dialog_nag_user (NMAWifiDialog *self);
+
+GLIB_DEPRECATED
+void nma_wifi_dialog_set_nag_ignored (NMAWifiDialog *self, gboolean ignored);
+
+GLIB_DEPRECATED
+gboolean nma_wifi_dialog_get_nag_ignored (NMAWifiDialog *self);
+
 #endif	/* NMA_WIFI_DIALOG_H */
 
